# kuhn-poker-deep-cfr-experiments

./: .gitignore  CODE_REVIEW.md  README.md  TESTING.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
deep_cfr_poker/: __init__.py  chart_titles.py  constants.py  evaluation.py  experiment_utils.py  networks.py  plotting.py  replay.py  seeding.py  snapshots.py  solver.py
docs/: GCP_BATCH_EXPERIMENTS.md  OUTPUT_CONVENTIONS.md  THESIS_ARTIFACTS.md
experiments/kuhn_poker/: architecture_ablation_common.py
experiments/kuhn_poker/deep_cfr_advantage_reinitialisation_ablation/: README.md  __init__.py  config.py  plotting.py  run.py
experiments/kuhn_poker/deep_cfr_checkpoint_head_to_head/: run.py  (+4 more)
gcp/: submit_batch_experiment.sh
notebooks/: kuhn_poker_deep_cfr_experiment_2_multiseed_revised.ipynb
scripts/: promote_thesis_artifacts.py
tests/: conftest.py  test_advantage_reinitialisation_ablation_smoke.py  test_architecture_ablation_smoke.py  test_chart_titles.py  test_checkpoint_head_to_head_smoke.py  test_constrained_random_search_smoke.py  test_evaluation.py  test_experiment_utils.py  test_final_only_policy_training_ablation_smoke.py  test_lr_schedule_ablation_smoke.py  test_network_size_ablation_smoke.py  test_network_variants.py  test_policy_training_frequency_ablation_smoke.py  test_promote_thesis_artifacts.py  test_replay.py  test_replay_averaging_ablation_smoke.py  test_seeding.py  test_smoke.py  test_snapshots.py  test_solver.py  test_target_processing_ablation_smoke.py  test_upload_outputs_to_gcs.py  test_warm_start_fair_ablation_smoke.py
(+73 files in other folders)
