[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_cfr_poker"
version = "0.2.0"
description = "Deep CFR experiments on OpenSpiel Kuhn poker."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Lawrence Knight" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["deep_cfr_poker*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "smoke: end-to-end smoke tests that load OpenSpiel and PyTorch",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length is enforced by formatter, not lint
